--- a/index.html
+++ b/index.html
@@ -1,12 +1,2 @@
-<html>
-<head>
-</head>
-<body>
-<<<<<<< HEAD
-master
-
-=======
-new_feature
-
->>>>>>> new_feature
+<html><head></head><body></body></html>
 
